--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ footer{
     transition: all 0.2s; /* CSS transitions https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Transitions/Using_CSS_transitions */
 }
 .flex-item a#demon{
-    background-image: url(../assets/images/demon.png); 
+    background-image: url(../assets/images/final.png); 
 }
 .flex-item a#eight{
     background-image: url(../assets/images/eight.png); 
@@ -92,9 +92,10 @@ footer{
     background-image: url(../assets/images/nike.png); 
 }.flex-item a#week4{
     background-image: url(../assets/images/week4.png); 
-}.flex-item a#final{
-    background-image: url(../assets/images/final.png); 
 }
+/* .flex-item a#final{
+    background-image: url(../assets/images/final.png); 
+} */
 
 /* want a different background image for each project? */
 /* try give each a tag a unique id in your HTML and then set different background images here*/
